Fixed code word-wrap on small screens

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -301,7 +301,7 @@ footer {
   }
 
   pre, code {
-    word-wrap:normal;
+    word-wrap:break-word;
   }
 }
 
